# mars-suite

./: .gitignore  AI_Coding_Tools_Primer.md  BETA_TESTERS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  PROJECT_OVERVIEW.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  codeql.yml
docs/: README.md
examples/: README.md  modem_example.py  signal_processing_example.py  utils_example.py
scripts/: setup_dev.py
src/mars_suite/: __init__.py
src/mars_suite/core/: __init__.py
src/mars_suite/modem/: __init__.py
src/mars_suite/protocols/: __init__.py
src/mars_suite/utils/: __init__.py
tests/: conftest.py
tests/integration/: __init__.py
tests/unit/: test_core.py  test_modem.py  test_utils.py
